test/corpus/errors.txt
================================================================================
Automatic Semicolon Insertion (ASI) Tests
================================================================================

These tests verify that tree-sitter correctly inserts automatic_semicolon
tokens when semicolons are missing but can be recovered.

================================================================================
Missing semicolon in var declaration
================================================================================

var
  a: Integer
  b: String;

---

(root
  (codeFragment
    (declVars
      (kVar)
      (declVar
        (identifier)
        (type
          (typeref
            (identifier)))
        (automatic_semicolon))
      (declVar
        (identifier)
        (type
          (typeref
            (kString)))))))

================================================================================
Missing semicolon in const declaration
================================================================================

const
  a = 1
  b = 2;

---

(root
  (codeFragment
    (declConsts
      (kConst)
      (declConst
        (identifier)
        (defaultValue
          (kEq)
          (literalNumber))
        (automatic_semicolon))
      (declConst
        (identifier)
        (defaultValue
          (kEq)
          (literalNumber))))))

================================================================================
Missing semicolon in type declaration
================================================================================

type
  TMyType = Integer
  TMyType2 = String;

---

(root
  (codeFragment
    (declTypes
      (kType)
      (declType
        (identifier)
        (kEq)
        (type
          (typeref
            (identifier)))
        (automatic_semicolon))
      (declType
        (identifier)
        (kEq)
        (type
          (typeref
            (kString)))))))

================================================================================
Missing semicolon in procedure var block
================================================================================

procedure Test;
var
  a: Integer
  b: String;
begin
end;

---

(root
  (codeFragment
    (defProc
      (declProc
        (kProcedure)
        (identifier))
      (declVars
        (kVar)
        (declVar
          (identifier)
          (type
            (typeref
              (identifier)))
          (automatic_semicolon))
        (declVar
          (identifier)
          (type
            (typeref
              (kString)))))
      (block
        (kBegin)
        (kEnd)))))

================================================================================
Missing semicolon after last var declaration before begin
================================================================================

procedure Test;
var
  a: Integer
begin
end;

---

(root
  (codeFragment
    (defProc
      (declProc
        (kProcedure)
        (identifier))
      (declVars
        (kVar)
        (declVar
          (identifier)
          (type
            (typeref
              (identifier)))
          (automatic_semicolon)))
      (block
        (kBegin)
        (kEnd)))))

================================================================================
Missing semicolon in class field declaration
================================================================================

type
  TMyClass = class
    FField1: Integer
    FField2: String;
  end;

---

(root
  (codeFragment
    (declTypes
      (kType)
      (declType
        (identifier)
        (kEq)
        (declClass
          (kClass)
          (declField
            (identifier)
            (type
              (typeref
                (identifier)))
            (automatic_semicolon))
          (declField
            (identifier)
            (type
              (typeref
                (kString))))
          (kEnd))))))

================================================================================
Missing semicolon in record field declaration
================================================================================

type
  TMyRecord = record
    Field1: Integer
    Field2: String;
  end;

---

(root
  (codeFragment
    (declTypes
      (kType)
      (declType
        (identifier)
        (kEq)
        (declClass
          (kRecord)
          (declField
            (identifier)
            (type
              (typeref
                (identifier)))
            (automatic_semicolon))
          (declField
            (identifier)
            (type
              (typeref
                (kString))))
          (kEnd))))))

================================================================================
Missing semicolon in statement list
================================================================================

procedure Test;
begin
  a := 1
  b := 2;
end;

---

(root
  (codeFragment
    (defProc
      (declProc
        (kProcedure)
        (identifier))
      (block
        (kBegin)
        (assignment
          (identifier)
          (kAssign)
          (literalNumber))
        (automatic_semicolon)
        (assignment
          (identifier)
          (kAssign)
          (literalNumber))
        (kEnd)))))

================================================================================
Missing semicolon after procedure body
================================================================================

procedure First;
begin
end

procedure Second;
begin
end;

---

(root
  (codeFragment
    (defProc
      (declProc
        (kProcedure)
        (identifier))
      (block
        (kBegin)
        (kEnd))
      (automatic_semicolon))
    (defProc
      (declProc
        (kProcedure)
        (identifier))
      (block
        (kBegin)
        (kEnd)))))

================================================================================
Missing semicolon after deprecated proc attribute with message
================================================================================

type
  TFoo = class
    procedure Execute1(const AData: Integer); overload; deprecated 'do not use'
    procedure Execute2(const AData: String);
  end;

---

(root
  (codeFragment
    (declTypes
      (kType)
      (declType
        (identifier)
        (kEq)
        (declClass
          (kClass)
          (declProc
            (kProcedure)
            (identifier)
            (declArgs
              (declArg
                (kConst)
                (identifier)
                (type
                  (typeref
                    (identifier)))))
            (procAttribute
              (kOverload))
            (procAttribute
              (kDeprecated)
              (literalString)))
          (declProc
            (kProcedure)
            (identifier)
            (declArgs
              (declArg
                (kConst)
                (identifier)
                (type
                  (typeref
                    (kString))))))
          (kEnd))))))

================================================================================
Method chaining across lines (trailing dot continues to next line)
================================================================================

procedure Test;
var
  obj: TObject;
begin
  obj.
  WriteLn('Hello');
end;

---

(root
  (codeFragment
    (defProc
      (declProc
        (kProcedure)
        (identifier))
      (declVars
        (kVar)
        (declVar
          (identifier)
          (type
            (typeref
              (identifier)))))
      (block
        (kBegin)
        (statement
          (exprCall
            (exprDot
              (identifier)
              (kDot)
              (identifier))
            (exprArgs
              (literalString))))
        (kEnd)))))

================================================================================
Incomplete member access for IntelliSense (trailing dot before end)
================================================================================

procedure Test;
var
  obj: TObject;
begin
  obj.
end;

---

(root
  (codeFragment
    (defProc
      (declProc
        (kProcedure)
        (identifier))
      (declVars
        (kVar)
        (declVar
          (identifier)
          (type
            (typeref
              (identifier)))))
      (block
        (kBegin)
        (statement
          (exprDot
            (identifier)
            (kDot)))
        (kEnd)))))
